--- a/INFT2051_Project/INFT2051_Project.csproj
+++ b/INFT2051_Project/INFT2051_Project.csproj
@@ -66,6 +66,9 @@
 	  <Compile Update="MainPage - Copy.xaml.cs">
 	    <DependentUpon>%(Filename)</DependentUpon>
 	  </Compile>
+	  <Compile Update="TwoStep.xaml.cs">
+	    <DependentUpon>TwoStep.xaml</DependentUpon>
+	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -75,7 +78,7 @@
 	  <MauiXaml Update="NewPage1.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="OneStep.xaml">
+	  <MauiXaml Update="TwoStep.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
