--- a/INFT2051_Project/INFT2051_Project.csproj
+++ b/INFT2051_Project/INFT2051_Project.csproj
@@ -102,6 +102,7 @@
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
+		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.2" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -119,6 +120,9 @@
 	  </Compile>
 	  <Compile Update="Pages\TwoStep.xaml.cs">
 	    <DependentUpon>TwoStep.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="Pages\ViewDataPage.xaml.cs">
+	    <DependentUpon>ViewDataPage.xaml</DependentUpon>
 	  </Compile>
 	</ItemGroup>
 
@@ -153,7 +157,7 @@
 	  <MauiXaml Update="Pages\TwoStep.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Pages\ViewData.xaml">
+	  <MauiXaml Update="Pages\ViewDataPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
