--- a/INFT2051_Project/INFT2051_Project.csproj
+++ b/INFT2051_Project/INFT2051_Project.csproj
@@ -156,6 +156,9 @@
 	  <MauiXaml Update="Pages\TwoStep.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\ViewActivityData.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\ViewDataPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
